Remove Kafka dependency and add static GTFS enrichment
Major changes:
- Removed Kafka/Docker infrastructure - now uses direct polling
- Added H2 database with JPA entities for static GTFS data (routes, stops, trips)
- Implemented GtfsStaticDataLoader to download and parse both GRT feeds
- Added vehicle positions feed support with new VehiclePosition model
- Enriched GraphQL responses with route names, stop names, and trip headsigns
- Updated TransitRepository with thread-safe volatile reference swapping
- Fixed CSV parser to handle quoted fields properly
- Added automatic temp directory cleanup after GTFS loading
- Configured 5s initial delay on polling to ensure caches load first

Technical improvements:
- Volatile cache maps in GtfsRealtimeService for thread visibility
- Auto-detection of GTFS zip structure (root vs subdirectory)
- Support for multiple static feed URLs via comma-separated config
- Proper protobuf field presence checking (has* methods)

All tests passing, enrichment verified working with live GRT data.